change to bitly url

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
   <!-- BEGIN AFFILIATE LINK OR ADVERTISING, FOOTER (DEMO ONLY, DELETE ME) -->
   <div class="container">
     <div class="adscard adscard--live">
-      <a class="adscard__img" href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697?ref=ariecupu" target="_blank">
+      <a class="adscard__img" href="http://bit.ly/KoolWb02" target="_blank">
         <img src="assets/img/unify_240.jpg" alt="thumbnail">
       </a>
       <p class="adscard__caption">
         <span>
           <span class="adscard__caption__main">
-            <a href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697?ref=ariecupu" target="_blank">Unify - Responsive Website HTML Template</a>
+            <a href="http://bit.ly/KoolWb02" target="_blank">Unify - Responsive Website HTML Template</a>
           </span>
           <span class="adscard__caption__secondary">
-            <a href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697?ref=ariecupu" target="_blank">Download from WrapBootstrap</a>
+            <a href="http://bit.ly/KoolWb02" target="_blank">Download from WrapBootstrap</a>
           </span>
         </span>
       </p>
